<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name">小琴</string>
    <string name="action_search">搜索</string>
    <string name="action_plus">功能</string>
    <string name="action_album">相册</string>
    <string name="action_collection">收藏</string>
    <string name="action_card">支付</string>
    <string name="action_settings">设置</string>
    <string name="action_feed">意见反馈</string>
    <string name="plus_group_chat">群聊</string>
    <string name="plus_add_friend">添加朋友</string>
    <string name="plus_video_chat">视频聊天</string>
    <string name="plus_scan">扫一扫</string>
    <string name="plus_take_photo">拍照分享</string>

    <!-- 星期 -->
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>

    <string name="goleft">&lt;</string>

    <string name="hello_world">Hello world!</string>

    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="Visible">Get Visible</string>
    <string name="List">List Devices</string>

    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_setting">Set</string>
    <string name="btn_choosecam">CamX</string>

    <string name="action_swichcam">Swich Camera</string>
    <string name="action_start_audio">Start Audio</string>

    <string name="action_mute_audio">Mute Audio</string>
    <string name="action_unmute_audio">UnMute Audio</string>

    <string name="action_start_video">Start Video</string>
    <string name="action_start_av">Start Video+Audio</string>
    <string name="action_start_file">Start FileTransfer</string>

    <string name="action_version">Version: 1.0---2014-07-24</string>

    <string name="codec_setting">Codec Setting</string>

    <string name="resolution">Resolution: </string>
    <string name="RadioButton_qvga">QVGA(320x240) </string>
    <string name="RadioButton_cif">CIF (352x288) </string>
    <string name="RadioButton_vga">VGA (640x480) </string>
    <string name="RadioButton_720p">720P(1280x720) </string>

    <string name="bitrate">Bitrate (KB):</string>
    <string name="fps">Framerate: </string>

    <string name="hardcode">Using Hard-coding</string>
    <string name="imgcut">Using ImgCut</string>

    <string name="network_setting">Network Setting</string>

    <string name="server_setting">Server Setting</string>
    <string name="serveip">IP Address: </string>
    <string name="serveport">IP Port: </string>

    <string name="remote_setting">Remote Setting</string>
    <string name="remoteip">IP Address: </string>
    <string name="remoteport">IP Port: </string>
    <string name="remotename">Alias: </string>

    <string name="local_setting">Local Setting</string>
    <string name="localip">IP Address: </string>
    <string name="localport">IP Port: </string>
    <string name="localname">Alias: </string>

    <string name="camera_setting">Camera Setting</string>
    <string name="frontcamera">Using Front-facing Camera</string>
    <string name="backcamera">Using Back-facing Camera </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
